[tool.poetry]
name = "rl-gym"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gym = {extras = ["box2d"], version = "^0.25.0"}
tensorflow = "^2.9.1"
click = "^8.1.3"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
mypy = "^0.971"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[[tool.mypy.overrides]]
module = "tensorflow"
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
